fixing footer phone number overlap issue

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -266,7 +266,7 @@ FIRST FOOTER CONTENT
 =========================*/
 
 .first_footer {
-    margin: 60px 0;
+    margin: 0 0 60px;
     background-color: #1e1e1e;
     width: 100%;
     text-align: center;
@@ -369,7 +369,6 @@ MEDIA QUERIES TABLET
         margin: 45px auto;
         padding: 15px;
         max-width: 500px;
-        height: 315px;
     }
 
     h1 {
